tests/sema/fail/v29_fail_extern_struct_gc_field.ep
# COMPILE_FAIL_CONTAINS: extern UseBad parameter value struct BadWinStruct field text has unsupported FFI type str

type BadWinStruct {
    text: str
}

extern "demo.dll" fun UseBad(value: BadWinStruct): void

fun main(): void {}
